[gd_scene load_steps=2 format=2]

[ext_resource path="res://ending_scene.gd" type="Script" id=1]

[node name="EndingScene" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 378.0
margin_top = 49.0
margin_right = 598.0
margin_bottom = 63.0
rect_scale = Vector2( 2, 2 )
text = "Game Over! Here are your results:"

[node name="ResultLabel" type="Label" parent="."]
margin_left = 374.0
margin_top = 122.0
margin_right = 594.0
margin_bottom = 136.0
rect_scale = Vector2( 2, 2 )

[node name="TotalScore" type="Label" parent="."]
margin_left = 363.0
margin_top = 306.0
margin_right = 583.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )

[node name="GotoMenuButton" type="Button" parent="."]
margin_left = 428.0
margin_top = 426.0
margin_right = 515.0
margin_bottom = 446.0
rect_scale = Vector2( 3, 3 )
text = "Go to Menu"

[connection signal="pressed" from="GotoMenuButton" to="." method="_on_GotoMenuButton_pressed"]
